feat: configure pom.xml to publish artifact to maven central